フォームの課題提出2

--- a/form/register-style.css
+++ b/form/register-style.css
@@ -5,3 +5,25 @@ span{color: white;
     border-radius: 5px;
 
 }
+
+table,th,td{
+    border: solid 1px white;
+    border-collapse: collapse;
+}
+
+
+
+th,td{
+    padding: 10px;
+}
+
+th{
+    background-color: rgb(101, 99, 99);
+    color: white;
+    text-align: left;
+}
+
+td{
+    background-color: rgb(191, 190, 190);
+}
+
