フォームの課題提供２

--- a/form/register-style.css
+++ b/form/register-style.css
@@ -1,29 +1,26 @@
 @charset "utf-8";
 
-span{color: white;
+span {
+    color: white;
     background-color: red;
     border-radius: 5px;
-
 }
 
-table,th,td{
+table,th,td {
     border: solid 1px white;
     border-collapse: collapse;
 }
 
-
-
-th,td{
+th,td {
     padding: 10px;
 }
 
-th{
+th {
     background-color: rgb(101, 99, 99);
     color: white;
     text-align: left;
 }
 
-td{
+td {
     background-color: rgb(191, 190, 190);
 }
-
